# test_CifraK

./: .env.example  README.md  docker-compose.yml  pyproject.toml  tox.ini
backend/: Dockerfile  __main__.py  create_admin.py  requirements.txt  tests.py
backend/config/: celery.py  schedules.py  settings.py  test_settings.py  urls.py
backend/news/: admin.py  apps.py  models.py  signals.py  tasks.py  tests.py  urls.py  utils.py  views.py
backend/news/migrations/: 0001_initial.py
backend/places/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  utils.py  views.py
backend/places/migrations/: 0001_initial.py
backend/templates/admin/: import_xlsx.html  places_change_list.html
